A4/parser.output
Terminals unused in grammar

   ERROR


State 24 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 202 conflicts: 2 reduce/reduce
State 203 conflicts: 1 shift/reduce
State 204 conflicts: 1 shift/reduce
State 211 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_list

    2 global_decl_list: global_decl_list global_decl
    3                 | %empty

    4 global_decl: decl_list function_decl
    5            | function_decl

    6 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    7              | type ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | type ID MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
    9              | type ID MK_LPAREN MK_RPAREN MK_SEMICOLON

   10 param_list: param_list MK_COMMA param
   11           | param

   12 param: type ID
   13      | struct_type ID
   14      | type ID dim_fn
   15      | struct_type ID dim_fn

   16 dim_fn: MK_LB expr_null MK_RB dimfn1

   17 dimfn1: MK_LB expr MK_RB dimfn1
   18       | %empty

   19 expr_null: expr
   20          | %empty

   21 block: decl_list stmt_list
   22      | stmt_list
   23      | decl_list
   24      | %empty

   25 decl_list: decl_list decl
   26          | decl

   27 decl: type_decl
   28     | var_decl

   29 type_decl: TYPEDEF type id_list MK_SEMICOLON
   30          | TYPEDEF VOID id_list MK_SEMICOLON
   31          | TYPEDEF struct_type id_list MK_SEMICOLON
   32          | struct_type MK_SEMICOLON

   33 var_decl: type init_id_list MK_SEMICOLON
   34         | struct_type id_list MK_SEMICOLON
   35         | ID id_list MK_SEMICOLON

   36 type: INT
   37     | FLOAT
   38     | VOID
   39     | error

   40 struct_type: STRUCT tag

   41 tag: ID MK_LBRACE decl_list MK_RBRACE
   42    | MK_LBRACE decl_list MK_RBRACE
   43    | ID MK_LBRACE MK_RBRACE
   44    | MK_LBRACE MK_RBRACE
   45    | ID

   46 id_list: ID
   47        | id_list MK_COMMA ID
   48        | id_list MK_COMMA ID dim_decl
   49        | ID dim_decl

   50 dim_decl: MK_LB cexpr MK_RB
   51         | dim_decl MK_LB cexpr MK_RB

   52 cexpr: cexpr add_op mcexpr
   53      | mcexpr

   54 mcexpr: mcexpr mul_op cfactor
   55       | cfactor

   56 cfactor: CONST
   57        | MK_LPAREN cexpr MK_RPAREN

   58 init_id_list: init_id
   59             | init_id_list MK_COMMA init_id

   60 init_id: ID
   61        | ID dim_decl
   62        | ID OP_ASSIGN relop_expr

   63 stmt_list: stmt_list stmt
   64          | stmt

   65 stmt: MK_LBRACE block MK_RBRACE
   66     | WHILE MK_LPAREN relop_expr_list MK_RPAREN stmt
   67     | FOR MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt
   68     | IF MK_LPAREN relop_expr MK_RPAREN stmt ELSE stmt
   69     | IF MK_LPAREN relop_expr MK_RPAREN stmt
   70     | ID MK_LPAREN relop_expr_list MK_RPAREN
   71     | var_ref OP_ASSIGN relop_expr MK_SEMICOLON
   72     | relop_expr_list MK_SEMICOLON
   73     | MK_SEMICOLON
   74     | RETURN MK_SEMICOLON
   75     | RETURN relop_expr MK_SEMICOLON

   76 assign_expr_list: nonempty_assign_expr_list
   77                 | %empty

   78 nonempty_assign_expr_list: nonempty_assign_expr_list MK_COMMA assign_expr
   79                          | assign_expr

   80 assign_expr: ID OP_ASSIGN relop_expr
   81            | relop_expr

   82 relop_expr: relop_term
   83           | relop_expr OP_OR relop_term

   84 relop_term: relop_factor
   85           | relop_term OP_AND relop_factor

   86 relop_factor: expr
   87             | expr rel_op expr

   88 rel_op: OP_LT
   89       | OP_LE
   90       | OP_GT
   91       | OP_GE
   92       | OP_EQ
   93       | OP_NE

   94 relop_expr_list: nonempty_relop_expr_list
   95                | %empty

   96 nonempty_relop_expr_list: nonempty_relop_expr_list MK_COMMA relop_expr
   97                         | relop_expr

   98 expr: expr add_op term
   99     | term

  100 add_op: OP_PLUS
  101       | OP_MINUS

  102 term: term mul_op factor
  103     | factor

  104 mul_op: OP_TIMES
  105       | OP_DIVIDE

  106 factor: MK_LPAREN relop_expr MK_RPAREN
  107       | OP_NOT MK_LPAREN relop_expr MK_RPAREN
  108       | OP_MINUS MK_LPAREN relop_expr MK_RPAREN
  109       | CONST
  110       | OP_NOT CONST
  111       | OP_MINUS CONST
  112       | ID MK_LPAREN relop_expr_list MK_RPAREN
  113       | OP_NOT ID MK_LPAREN relop_expr_list MK_RPAREN
  114       | OP_MINUS ID MK_LPAREN relop_expr_list MK_RPAREN
  115       | var_ref
  116       | OP_NOT var_ref
  117       | OP_MINUS var_ref

  118 var_ref: ID
  119        | var_ref dim
  120        | var_ref struct_tail

  121 dim: MK_LB expr MK_RB

  122 struct_tail: MK_DOT ID


Terminals, with rules where they appear

$end (0) 0
error (256) 39
ID (258) 6 7 8 9 12 13 14 15 35 41 43 45 46 47 48 49 60 61 62 70 80
    112 113 114 118 122
CONST (259) 56 109 110 111
VOID (260) 30 38
INT (261) 36
FLOAT (262) 37
IF (263) 68 69
ELSE (264) 68
WHILE (265) 66
FOR (266) 67
STRUCT (267) 40
TYPEDEF (268) 29 30 31
OP_ASSIGN (269) 62 71 80
OP_OR (270) 83
OP_AND (271) 85
OP_NOT (272) 107 110 113 116
OP_EQ (273) 92
OP_NE (274) 93
OP_GT (275) 90
OP_LT (276) 88
OP_GE (277) 91
OP_LE (278) 89
OP_PLUS (279) 100
OP_MINUS (280) 101 108 111 114 117
OP_TIMES (281) 104
OP_DIVIDE (282) 105
MK_LB (283) 16 17 50 51 121
MK_RB (284) 16 17 50 51 121
MK_LPAREN (285) 6 7 8 9 57 66 67 68 69 70 106 107 108 112 113 114
MK_RPAREN (286) 6 7 8 9 57 66 67 68 69 70 106 107 108 112 113 114
MK_LBRACE (287) 6 7 41 42 43 44 65
MK_RBRACE (288) 6 7 41 42 43 44 65
MK_COMMA (289) 10 47 48 59 78 96
MK_SEMICOLON (290) 8 9 29 30 31 32 33 34 35 67 71 72 73 74 75
MK_DOT (291) 122
ERROR (292)
RETURN (293) 74 75


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1, on right: 0
global_decl_list (41)
    on left: 2 3, on right: 1 2
global_decl (42)
    on left: 4 5, on right: 2
function_decl (43)
    on left: 6 7 8 9, on right: 4 5
param_list (44)
    on left: 10 11, on right: 6 8 10
param (45)
    on left: 12 13 14 15, on right: 10 11
dim_fn (46)
    on left: 16, on right: 14 15
dimfn1 (47)
    on left: 17 18, on right: 16 17
expr_null (48)
    on left: 19 20, on right: 16
block (49)
    on left: 21 22 23 24, on right: 6 7 65
decl_list (50)
    on left: 25 26, on right: 4 21 23 25 41 42
decl (51)
    on left: 27 28, on right: 25 26
type_decl (52)
    on left: 29 30 31 32, on right: 27
var_decl (53)
    on left: 33 34 35, on right: 28
type (54)
    on left: 36 37 38 39, on right: 6 7 8 9 12 14 29 33
struct_type (55)
    on left: 40, on right: 13 15 31 32 34
tag (56)
    on left: 41 42 43 44 45, on right: 40
id_list (57)
    on left: 46 47 48 49, on right: 29 30 31 34 35 47 48
dim_decl (58)
    on left: 50 51, on right: 48 49 51 61
cexpr (59)
    on left: 52 53, on right: 50 51 52 57
mcexpr (60)
    on left: 54 55, on right: 52 53 54
cfactor (61)
    on left: 56 57, on right: 54 55
init_id_list (62)
    on left: 58 59, on right: 33 59
init_id (63)
    on left: 60 61 62, on right: 58 59
stmt_list (64)
    on left: 63 64, on right: 21 22 63
stmt (65)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 63 64 66 67
    68 69
assign_expr_list (66)
    on left: 76 77, on right: 67
nonempty_assign_expr_list (67)
    on left: 78 79, on right: 76 78
assign_expr (68)
    on left: 80 81, on right: 78 79
relop_expr (69)
    on left: 82 83, on right: 62 68 69 71 75 80 81 83 96 97 106 107
    108
relop_term (70)
    on left: 84 85, on right: 82 83 85
relop_factor (71)
    on left: 86 87, on right: 84 85
rel_op (72)
    on left: 88 89 90 91 92 93, on right: 87
relop_expr_list (73)
    on left: 94 95, on right: 66 67 70 72 112 113 114
nonempty_relop_expr_list (74)
    on left: 96 97, on right: 94 96
expr (75)
    on left: 98 99, on right: 17 19 86 87 98 121
add_op (76)
    on left: 100 101, on right: 52 98
term (77)
    on left: 102 103, on right: 98 99 102
mul_op (78)
    on left: 104 105, on right: 54 102
factor (79)
    on left: 106 107 108 109 110 111 112 113 114 115 116 117, on right:
    102 103
var_ref (80)
    on left: 118 119 120, on right: 71 115 116 117 119 120
dim (81)
    on left: 121, on right: 119
struct_tail (82)
    on left: 122, on right: 120


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (global_decl_list)

    program           go to state 1
    global_decl_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_decl_list .
    2 global_decl_list: global_decl_list . global_decl

    error    shift, and go to state 4
    ID       shift, and go to state 5
    VOID     shift, and go to state 6
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    TYPEDEF  shift, and go to state 10

    $end  reduce using rule 1 (program)

    global_decl    go to state 11
    function_decl  go to state 12
    decl_list      go to state 13
    decl           go to state 14
    type_decl      go to state 15
    var_decl       go to state 16
    type           go to state 17
    struct_type    go to state 18


State 3

    0 $accept: program $end .

    $default  accept


State 4

   39 type: error .

    $default  reduce using rule 39 (type)


State 5

   35 var_decl: ID . id_list MK_SEMICOLON

    ID  shift, and go to state 19

    id_list  go to state 20


State 6

   38 type: VOID .

    $default  reduce using rule 38 (type)


State 7

   36 type: INT .

    $default  reduce using rule 36 (type)


State 8

   37 type: FLOAT .

    $default  reduce using rule 37 (type)


State 9

   40 struct_type: STRUCT . tag

    ID         shift, and go to state 21
    MK_LBRACE  shift, and go to state 22

    tag  go to state 23


State 10

   29 type_decl: TYPEDEF . type id_list MK_SEMICOLON
   30          | TYPEDEF . VOID id_list MK_SEMICOLON
   31          | TYPEDEF . struct_type id_list MK_SEMICOLON

    error   shift, and go to state 4
    VOID    shift, and go to state 24
    INT     shift, and go to state 7
    FLOAT   shift, and go to state 8
    STRUCT  shift, and go to state 9

    type         go to state 25
    struct_type  go to state 26


State 11

    2 global_decl_list: global_decl_list global_decl .

    $default  reduce using rule 2 (global_decl_list)


State 12

    5 global_decl: function_decl .

    $default  reduce using rule 5 (global_decl)


State 13

    4 global_decl: decl_list . function_decl
   25 decl_list: decl_list . decl

    error    shift, and go to state 4
    ID       shift, and go to state 5
    VOID     shift, and go to state 6
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    TYPEDEF  shift, and go to state 10

    function_decl  go to state 27
    decl           go to state 28
    type_decl      go to state 15
    var_decl       go to state 16
    type           go to state 17
    struct_type    go to state 18


State 14

   26 decl_list: decl .

    $default  reduce using rule 26 (decl_list)


State 15

   27 decl: type_decl .

    $default  reduce using rule 27 (decl)


State 16

   28 decl: var_decl .

    $default  reduce using rule 28 (decl)


State 17

    6 function_decl: type . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    7              | type . ID MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | type . ID MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
    9              | type . ID MK_LPAREN MK_RPAREN MK_SEMICOLON
   33 var_decl: type . init_id_list MK_SEMICOLON

    ID  shift, and go to state 29

    init_id_list  go to state 30
    init_id       go to state 31


State 18

   32 type_decl: struct_type . MK_SEMICOLON
   34 var_decl: struct_type . id_list MK_SEMICOLON

    ID            shift, and go to state 19
    MK_SEMICOLON  shift, and go to state 32

    id_list  go to state 33


State 19

   46 id_list: ID .
   49        | ID . dim_decl

    MK_LB  shift, and go to state 34

    $default  reduce using rule 46 (id_list)

    dim_decl  go to state 35


State 20

   35 var_decl: ID id_list . MK_SEMICOLON
   47 id_list: id_list . MK_COMMA ID
   48        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 36
    MK_SEMICOLON  shift, and go to state 37


State 21

   41 tag: ID . MK_LBRACE decl_list MK_RBRACE
   43    | ID . MK_LBRACE MK_RBRACE
   45    | ID .

    MK_LBRACE  shift, and go to state 38

    $default  reduce using rule 45 (tag)


State 22

   42 tag: MK_LBRACE . decl_list MK_RBRACE
   44    | MK_LBRACE . MK_RBRACE

    error      shift, and go to state 4
    ID         shift, and go to state 5
    VOID       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    STRUCT     shift, and go to state 9
    TYPEDEF    shift, and go to state 10
    MK_RBRACE  shift, and go to state 39

    decl_list    go to state 40
    decl         go to state 14
    type_decl    go to state 15
    var_decl     go to state 16
    type         go to state 41
    struct_type  go to state 18


State 23

   40 struct_type: STRUCT tag .

    $default  reduce using rule 40 (struct_type)


State 24

   30 type_decl: TYPEDEF VOID . id_list MK_SEMICOLON
   38 type: VOID .

    ID  shift, and go to state 19

    ID  [reduce using rule 38 (type)]

    id_list  go to state 42


State 25

   29 type_decl: TYPEDEF type . id_list MK_SEMICOLON

    ID  shift, and go to state 19

    id_list  go to state 43


State 26

   31 type_decl: TYPEDEF struct_type . id_list MK_SEMICOLON

    ID  shift, and go to state 19

    id_list  go to state 44


State 27

    4 global_decl: decl_list function_decl .

    $default  reduce using rule 4 (global_decl)


State 28

   25 decl_list: decl_list decl .

    $default  reduce using rule 25 (decl_list)


State 29

    6 function_decl: type ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    7              | type ID . MK_LPAREN MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | type ID . MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
    9              | type ID . MK_LPAREN MK_RPAREN MK_SEMICOLON
   60 init_id: ID .
   61        | ID . dim_decl
   62        | ID . OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 45
    MK_LB      shift, and go to state 34
    MK_LPAREN  shift, and go to state 46

    $default  reduce using rule 60 (init_id)

    dim_decl  go to state 47


State 30

   33 var_decl: type init_id_list . MK_SEMICOLON
   59 init_id_list: init_id_list . MK_COMMA init_id

    MK_COMMA      shift, and go to state 48
    MK_SEMICOLON  shift, and go to state 49


State 31

   58 init_id_list: init_id .

    $default  reduce using rule 58 (init_id_list)


State 32

   32 type_decl: struct_type MK_SEMICOLON .

    $default  reduce using rule 32 (type_decl)


State 33

   34 var_decl: struct_type id_list . MK_SEMICOLON
   47 id_list: id_list . MK_COMMA ID
   48        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 36
    MK_SEMICOLON  shift, and go to state 50


State 34

   50 dim_decl: MK_LB . cexpr MK_RB

    CONST      shift, and go to state 51
    MK_LPAREN  shift, and go to state 52

    cexpr    go to state 53
    mcexpr   go to state 54
    cfactor  go to state 55


State 35

   49 id_list: ID dim_decl .
   51 dim_decl: dim_decl . MK_LB cexpr MK_RB

    MK_LB  shift, and go to state 56

    $default  reduce using rule 49 (id_list)


State 36

   47 id_list: id_list MK_COMMA . ID
   48        | id_list MK_COMMA . ID dim_decl

    ID  shift, and go to state 57


State 37

   35 var_decl: ID id_list MK_SEMICOLON .

    $default  reduce using rule 35 (var_decl)


State 38

   41 tag: ID MK_LBRACE . decl_list MK_RBRACE
   43    | ID MK_LBRACE . MK_RBRACE

    error      shift, and go to state 4
    ID         shift, and go to state 5
    VOID       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    STRUCT     shift, and go to state 9
    TYPEDEF    shift, and go to state 10
    MK_RBRACE  shift, and go to state 58

    decl_list    go to state 59
    decl         go to state 14
    type_decl    go to state 15
    var_decl     go to state 16
    type         go to state 41
    struct_type  go to state 18


State 39

   44 tag: MK_LBRACE MK_RBRACE .

    $default  reduce using rule 44 (tag)


State 40

   25 decl_list: decl_list . decl
   42 tag: MK_LBRACE decl_list . MK_RBRACE

    error      shift, and go to state 4
    ID         shift, and go to state 5
    VOID       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    STRUCT     shift, and go to state 9
    TYPEDEF    shift, and go to state 10
    MK_RBRACE  shift, and go to state 60

    decl         go to state 28
    type_decl    go to state 15
    var_decl     go to state 16
    type         go to state 41
    struct_type  go to state 18


State 41

   33 var_decl: type . init_id_list MK_SEMICOLON

    ID  shift, and go to state 61

    init_id_list  go to state 30
    init_id       go to state 31


State 42

   30 type_decl: TYPEDEF VOID id_list . MK_SEMICOLON
   47 id_list: id_list . MK_COMMA ID
   48        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 36
    MK_SEMICOLON  shift, and go to state 62


State 43

   29 type_decl: TYPEDEF type id_list . MK_SEMICOLON
   47 id_list: id_list . MK_COMMA ID
   48        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 36
    MK_SEMICOLON  shift, and go to state 63


State 44

   31 type_decl: TYPEDEF struct_type id_list . MK_SEMICOLON
   47 id_list: id_list . MK_COMMA ID
   48        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 36
    MK_SEMICOLON  shift, and go to state 64


State 45

   62 init_id: ID OP_ASSIGN . relop_expr

    ID         shift, and go to state 65
    CONST      shift, and go to state 66
    OP_NOT     shift, and go to state 67
    OP_MINUS   shift, and go to state 68
    MK_LPAREN  shift, and go to state 69

    relop_expr    go to state 70
    relop_term    go to state 71
    relop_factor  go to state 72
    expr          go to state 73
    term          go to state 74
    factor        go to state 75
    var_ref       go to state 76


State 46

    6 function_decl: type ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE block MK_RBRACE
    7              | type ID MK_LPAREN . MK_RPAREN MK_LBRACE block MK_RBRACE
    8              | type ID MK_LPAREN . param_list MK_RPAREN MK_SEMICOLON
    9              | type ID MK_LPAREN . MK_RPAREN MK_SEMICOLON

    error      shift, and go to state 4
    VOID       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    STRUCT     shift, and go to state 9
    MK_RPAREN  shift, and go to state 77

    param_list   go to state 78
    param        go to state 79
    type         go to state 80
    struct_type  go to state 81


State 47

   51 dim_decl: dim_decl . MK_LB cexpr MK_RB
   61 init_id: ID dim_decl .

    MK_LB  shift, and go to state 56

    $default  reduce using rule 61 (init_id)


State 48

   59 init_id_list: init_id_list MK_COMMA . init_id

    ID  shift, and go to state 61

    init_id  go to state 82


State 49

   33 var_decl: type init_id_list MK_SEMICOLON .

    $default  reduce using rule 33 (var_decl)


State 50

   34 var_decl: struct_type id_list MK_SEMICOLON .

    $default  reduce using rule 34 (var_decl)


State 51

   56 cfactor: CONST .

    $default  reduce using rule 56 (cfactor)


State 52

   57 cfactor: MK_LPAREN . cexpr MK_RPAREN

    CONST      shift, and go to state 51
    MK_LPAREN  shift, and go to state 52

    cexpr    go to state 83
    mcexpr   go to state 54
    cfactor  go to state 55


State 53

   50 dim_decl: MK_LB cexpr . MK_RB
   52 cexpr: cexpr . add_op mcexpr

    OP_PLUS   shift, and go to state 84
    OP_MINUS  shift, and go to state 85
    MK_RB     shift, and go to state 86
